paginaçao feita junto com o css das questoes

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
   }
+  body{
+    background-image: url(https://i.pinimg.com/474x/78/c4/48/78c44899ce4f1650bff129376564777a.jpg);
+  }
   main{
     width: 60vw;
     display: flex;
@@ -38,11 +41,18 @@
     color: #000;
     background: #bb1f03;
   }
-  .block h3{
+  .block a{
     font-size: 23px;
+    text-decoration: none;
+    color: aliceblue;
   }
   .test{
-    position: absolute;
+    position: relative;
     width: 50vw;
-    height: 60vh;
+    height: 50vh;
+    background-color: #a20000;
+  }
+
+  .hiden{
+    display: none;
   }
