--- a/css/p10.css
+++ b/css/p10.css
@@ -19,7 +19,7 @@ h1 {
 .bruxa {
     width: 100vw;
     height: 100vh;
-    background-image: url(img/bruxa\ Halloween\ 21.gif);
+    background-image: url(../img/bruxa\ Halloween\ 21.gif);
     background-size: auto;
     background-repeat: no-repeat;
     right: 135vw;
