efeito de certo ou errado finalizado!

--- a/css/p1.css
+++ b/css/p1.css
@@ -8,7 +8,7 @@ body{
     background-color: #212121;
 }
 
-form{
+section{
     width: 50vw;
     height: 50vh;
     position: absolute;
@@ -20,13 +20,13 @@ form{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-form header{
+section header{
     background-color: rgb(62, 104, 184);
     padding: 30px;
     border-radius: 10px;
     color: aliceblue;
 }
-form button{
+section button{
     padding: 5px 10px;
     background-color: white;
     margin-top: 20px;
@@ -35,7 +35,7 @@ form button{
     font-size: 20px;
     cursor: pointer;
 }
-form button:hover{
+section button:hover{
     background: rgb(207, 207, 207);
 }
 .options{
@@ -52,8 +52,8 @@ form button:hover{
     padding: 30px;
 }
 .error{
-    background-color: red;
+    background-color: #fd4029;
 }
 .right{
-    background-color: green
+    background-color: #60b84f;
 }
